@@ -4,7 +4,7 @@
   <meta charset="utf-8" /><meta name="generator" content="Docutils 0.17.1: http://docutils.sourceforge.net/" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>GEOMS-TE-PANDORA-DIRECTSUN-GAS-003-HCHO &mdash; HARP 1.15 documentation</title>
+  <title>GEOMS-TE-PANDORA-DIRECTSUN-GAS-003-H2CO &mdash; HARP 1.15 documentation</title>
       <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
       <link rel="stylesheet" href="../_static/css/theme.css" type="text/css" />
       <link rel="stylesheet" href="../_static/custom.css" type="text/css" />
@@ -59,7 +59,7 @@
           <div role="navigation" aria-label="Page navigation">
   <ul class="wy-breadcrumbs">
       <li><a href="../index.html" class="icon icon-home"></a> &raquo;</li>
-      <li>GEOMS-TE-PANDORA-DIRECTSUN-GAS-003-HCHO</li>
+      <li>GEOMS-TE-PANDORA-DIRECTSUN-GAS-003-H2CO</li>
       <li class="wy-breadcrumbs-aside">
       </li>
   </ul>
@@ -68,11 +68,11 @@
           <div role="main" class="document" itemscope="itemscope" itemtype="http://schema.org/Article">
            <div itemprop="articleBody">
              
-  <section id="geoms-te-pandora-directsun-gas-003-hcho">
-<h1>GEOMS-TE-PANDORA-DIRECTSUN-GAS-003-HCHO</h1>
+  <section id="geoms-te-pandora-directsun-gas-003-h2co">
+<h1>GEOMS-TE-PANDORA-DIRECTSUN-GAS-003-H2CO</h1>
 <section id="variables">
 <h2>Variables</h2>
-<p>The table below lists the variables that are present in the HARP product that results from an ingestion of <code class="docutils literal notranslate"><span class="pre">GEOMS-TE-PANDORA-DIRECTSUN-GAS-003-HCHO</span></code> data.</p>
+<p>The table below lists the variables that are present in the HARP product that results from an ingestion of <code class="docutils literal notranslate"><span class="pre">GEOMS-TE-PANDORA-DIRECTSUN-GAS-003-H2CO</span></code> data.</p>
 <table class="colwidths-given docutils align-default">
 <colgroup>
 <col style="width: 25%" />
@@ -156,53 +156,53 @@
 <td><p>[degree]</p></td>
 <td><p>solar azimuth angle</p></td>
 </tr>
-<tr class="row-odd"><td><p><strong>HCHO_column_number_density</strong></p></td>
+<tr class="row-odd"><td><p><strong>H2CO_column_number_density</strong></p></td>
 <td><p>double</p></td>
 <td><p>{<em>time</em>}</p></td>
 <td><p>[mol/m2]</p></td>
-<td><p>HCHO column number density</p></td>
+<td><p>H2CO column number density</p></td>
 </tr>
-<tr class="row-even"><td><p><strong>HCHO_column_number_density_uncertainty</strong></p></td>
+<tr class="row-even"><td><p><strong>H2CO_column_number_density_uncertainty</strong></p></td>
 <td><p>double</p></td>
 <td><p>{<em>time</em>}</p></td>
 <td><p>[mol/m2]</p></td>
-<td><p>total uncertainty of the HCHO column number density</p></td>
+<td><p>total uncertainty of the H2CO column number density</p></td>
 </tr>
-<tr class="row-odd"><td><p><strong>HCHO_column_number_density_uncertainty_random</strong></p></td>
+<tr class="row-odd"><td><p><strong>H2CO_column_number_density_uncertainty_random</strong></p></td>
 <td><p>double</p></td>
 <td><p>{<em>time</em>}</p></td>
 <td><p>[mol/m2]</p></td>
-<td><p>random uncertainty of the HCHO column number density</p></td>
+<td><p>random uncertainty of the H2CO column number density</p></td>
 </tr>
-<tr class="row-even"><td><p><strong>HCHO_column_number_density_uncertainty_systematic</strong></p></td>
+<tr class="row-even"><td><p><strong>H2CO_column_number_density_uncertainty_systematic</strong></p></td>
 <td><p>double</p></td>
 <td><p>{<em>time</em>}</p></td>
 <td><p>[mol/m2]</p></td>
-<td><p>systematic uncertainty of the HCHO column number density</p></td>
+<td><p>systematic uncertainty of the H2CO column number density</p></td>
 </tr>
-<tr class="row-odd"><td><p><strong>HCHO_column_number_density_amf</strong></p></td>
+<tr class="row-odd"><td><p><strong>H2CO_column_number_density_amf</strong></p></td>
 <td><p>double</p></td>
 <td><p>{<em>time</em>}</p></td>
 <td><p>[1]</p></td>
-<td><p>air mass factor of HCHO column number density</p></td>
+<td><p>air mass factor of H2CO column number density</p></td>
 </tr>
-<tr class="row-even"><td><p><strong>HCHO_column_number_density_validity</strong></p></td>
+<tr class="row-even"><td><p><strong>H2CO_column_number_density_validity</strong></p></td>
 <td><p>int32</p></td>
 <td><p>{<em>time</em>}</p></td>
 <td></td>
-<td><p>quality flag of HCHO column number density</p></td>
+<td><p>quality flag of H2CO column number density</p></td>
 </tr>
-<tr class="row-odd"><td><p><strong>HCHO_effective_temperature</strong></p></td>
+<tr class="row-odd"><td><p><strong>H2CO_effective_temperature</strong></p></td>
 <td><p>double</p></td>
 <td><p>{<em>time</em>}</p></td>
 <td><p>[K]</p></td>
-<td><p>HCHO effective temperature</p></td>
+<td><p>H2CO effective temperature</p></td>
 </tr>
-<tr class="row-even"><td><p><strong>HCHO_effective_temperature_uncertainty</strong></p></td>
+<tr class="row-even"><td><p><strong>H2CO_effective_temperature_uncertainty</strong></p></td>
 <td><p>double</p></td>
 <td><p>{<em>time</em>}</p></td>
 <td><p>[K]</p></td>
-<td><p>total uncertainty of the HCHO effective temperature</p></td>
+<td><p>total uncertainty of the H2CO effective temperature</p></td>
 </tr>
 <tr class="row-odd"><td><p><strong>index</strong></p></td>
 <td><p>int32</p></td>
@@ -272,37 +272,37 @@
 <td><p><em>path</em></p></td>
 <td><p><strong>/ANGLE.SOLAR_AZIMUTH</strong></p></td>
 </tr>
-<tr class="row-odd"><td><p><strong>HCHO_column_number_density</strong></p></td>
+<tr class="row-odd"><td><p><strong>H2CO_column_number_density</strong></p></td>
 <td><p><em>path</em></p></td>
-<td><p><strong>/HCHO.COLUMN.ABSORPTION.SOLAR</strong></p></td>
+<td><p><strong>/H2CO.COLUMN.ABSORPTION.SOLAR</strong></p></td>
 </tr>
-<tr class="row-even"><td><p><strong>HCHO_column_number_density_uncertainty</strong></p></td>
+<tr class="row-even"><td><p><strong>H2CO_column_number_density_uncertainty</strong></p></td>
 <td><p><em>path</em></p></td>
-<td><p><strong>/HCHO.COLUMN.ABSORPTION.SOLAR_UNCERTAINTY.COMBINED.STANDARD</strong></p></td>
+<td><p><strong>/H2CO.COLUMN.ABSORPTION.SOLAR_UNCERTAINTY.COMBINED.STANDARD</strong></p></td>
 </tr>
-<tr class="row-odd"><td><p><strong>HCHO_column_number_density_uncertainty_random</strong></p></td>
+<tr class="row-odd"><td><p><strong>H2CO_column_number_density_uncertainty_random</strong></p></td>
 <td><p><em>path</em></p></td>
-<td><p><strong>/HCHO.COLUMN.ABSORPTION.SOLAR_UNCERTAINTY.RANDOM.STANDARD</strong></p></td>
+<td><p><strong>/H2CO.COLUMN.ABSORPTION.SOLAR_UNCERTAINTY.RANDOM.STANDARD</strong></p></td>
 </tr>
-<tr class="row-even"><td><p><strong>HCHO_column_number_density_uncertainty_systematic</strong></p></td>
+<tr class="row-even"><td><p><strong>H2CO_column_number_density_uncertainty_systematic</strong></p></td>
 <td><p><em>path</em></p></td>
-<td><p><strong>/HCHO.COLUMN.ABSORPTION.SOLAR_UNCERTAINTY.SYSTEMATIC.STANDARD</strong></p></td>
+<td><p><strong>/H2CO.COLUMN.ABSORPTION.SOLAR_UNCERTAINTY.SYSTEMATIC.STANDARD</strong></p></td>
 </tr>
-<tr class="row-odd"><td><p><strong>HCHO_column_number_density_amf</strong></p></td>
+<tr class="row-odd"><td><p><strong>H2CO_column_number_density_amf</strong></p></td>
 <td><p><em>path</em></p></td>
-<td><p><strong>/HCHO.COLUMN.ABSORPTION.SOLAR_AMF</strong></p></td>
+<td><p><strong>/H2CO.COLUMN.ABSORPTION.SOLAR_AMF</strong></p></td>
 </tr>
-<tr class="row-even"><td><p><strong>HCHO_column_number_density_validity</strong></p></td>
+<tr class="row-even"><td><p><strong>H2CO_column_number_density_validity</strong></p></td>
 <td><p><em>path</em></p></td>
-<td><p><strong>/HCHO.COLUMN.ABSORPTION.SOLAR_FLAG</strong></p></td>
+<td><p><strong>/H2CO.COLUMN.ABSORPTION.SOLAR_FLAG</strong></p></td>
 </tr>
-<tr class="row-odd"><td><p><strong>HCHO_effective_temperature</strong></p></td>
+<tr class="row-odd"><td><p><strong>H2CO_effective_temperature</strong></p></td>
 <td><p><em>path</em></p></td>
-<td><p><strong>/TEMPERATURE.EFFECTIVE.HCHO</strong></p></td>
+<td><p><strong>/TEMPERATURE.EFFECTIVE.H2CO</strong></p></td>
 </tr>
-<tr class="row-even"><td><p><strong>HCHO_effective_temperature_uncertainty</strong></p></td>
+<tr class="row-even"><td><p><strong>H2CO_effective_temperature_uncertainty</strong></p></td>
 <td><p><em>path</em></p></td>
-<td><p><strong>/TEMPERATURE.EFFECTIVE.HCHO_UNCERTAINTY.COMBINED.STANDARD</strong></p></td>
+<td><p><strong>/TEMPERATURE.EFFECTIVE.H2CO_UNCERTAINTY.COMBINED.STANDARD</strong></p></td>
 </tr>
 </tbody>
 </table>
