@@ -1189,9 +1189,9 @@
 <td></td>
 <td><p>GEOMS template for Pandora direct-sun measurements v003 - SO2</p></td>
 </tr>
-<tr class="row-odd"><td><p><a class="reference internal" href="GEOMS-TE-PANDORA-DIRECTSUN-GAS-003-HCHO.html"><span class="doc">GEOMS-TE-PANDORA-DIRECTSUN-GAS-003-HCHO</span></a></p></td>
+<tr class="row-odd"><td><p><a class="reference internal" href="GEOMS-TE-PANDORA-DIRECTSUN-GAS-003-H2CO.html"><span class="doc">GEOMS-TE-PANDORA-DIRECTSUN-GAS-003-H2CO</span></a></p></td>
 <td></td>
-<td><p>GEOMS template for Pandora direct-sun measurements v003 - HCHO</p></td>
+<td><p>GEOMS template for Pandora direct-sun measurements v003 - H2CO</p></td>
 </tr>
 </tbody>
 </table>
